[package]
name = "aish"
version = "0.1.0"
edition = "2021"
description = "Get shell commands from AI assistant"
authors = ["Daniel Echlin"]
license = "MIT"

[dependencies]
clap = "3.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"